--- a/index.html
+++ b/index.html
@@ -1,126 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
-</head>
+  </head>
 
-<body class="page">
+  <body class="page">
     <!-- Шапка сайту -->
 
     <header>
-        <nav class="main-navigation">
-            <a class="link-logo link" href="./index.html">Web<span class="logo-text">Studio</span></a>
-            <ul class="site-nav list">
-                <li><a class="header-text link" href="./index.html"> Studio</a></li>
-                <li><a class="header-text link" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="header-text link" href="">Contacts</a></li>
-            </ul>
-        </nav>
+      <nav class="container main-nav">
+        <a class="link-logo link" href="./index.html"
+          >Web<span class="logo-text">Studio</span></a
+        >
+        <ul class="site-nav list">
+          <li class="item">
+            <a class="header-text link" href="./index.html"> Studio</a>
+          </li>
+          <li class="item">
+            <a class="header-text link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="item">
+            <a class="header-text link" href="">Contacts</a>
+          </li>
+        </ul>
         <address class="address link">
-            <ul class="list">
-                <li><a class="adress-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="adress-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
+          <ul class="auth-nav list">
+            <li>
+              <a class="adress-item link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="adress-item link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
         </address>
+      </nav>
     </header>
-   <!--Герой -->
-   <main>
-    <section class="hero">
-        <h1 class="hero-title">Effective Solutions
-            for Your Business</h1>
-            <button type="button" class="main-button">Order Service</button>
-    </section>
-    <section class="list">
-    <h2 hidden class="feature-titles"> Our advantages</h2>
-    <ul class="list">
-        <li>
-            <h3 class="title-text">Strategy</h3>
-            <p class="text">
-                Our goal is to identify the business
-                problem to walk away with the perfect and creative solution.
-            </p>
-        </li>
-        <li>
-            <h3 class="title-text">Punctuality</h3>
-            <p class="text">
-                Bring the key message to the brand's audience for the best price within the shortest possible time.
-            </p>
-        </li>
-        <li>
-            <h3 class="title-text">Diligence</h3>
-            <p class="text">
-                Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-            </p>
-        </li>
-        <li>
-            <h3 class="title-text">Technologies</h3>
-            <p class="text">
-                Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-            </p>
-        </li>
-    </ul>
-</section>
-<section class="section">
-<h2 class="section-title"> What are we doing</h2>
-<ul class="page-work list">
-    <li><img src="./images/Photo1.jpg" alt="Computer" width="360"/></li>
-    <li><img src="./images/Photo2.jpg" alt="Massage" width="360"/></li>
-    <li><img src="./images/Photo3.jpg" alt="Phone" width="360"/></li>
-</ul>
-</section>
-<section class="section-team">
-    <h2 class="section-title list">Our Team</h2>
-    <ul class="workers-group list">
-        <li class="workers-title">
-            <img src="./images/Person1.jpg" alt="Worker1" width="264" class="image-person"/>
-            <h3 class="title-text"> Mark Guerrero</h3>
-            <p class="text">
-                Product Designer
-            </p>
-        </li>
-        <li class="workers-title">
-            <img src="./images/Person2.jpg" alt="Worker2" width="264" class="image-person"/>
-            <h3 class="title-text"> Tom Ford</h3>
-            <p class="text">
-                Frontend Developer
-            </p>
-        </li>
-        <li class="workers-title">
-            <img src="./images/Person3.jpg" alt="Worker3" width="264" class="image-person"/>
-            <h3 class="title-text"> Camila Garcia</h3>
-            <p class="text">
-                Marketing
-            </p>
-        </li>
-        <li class="workers-title">
-            <img src="./images/Person4.jpg" alt="Worker4" width="264" class="image-person"/>
-            <h3 class="title-text">Daniel Wilson</h3>
-            <p class="text">
-                UI Designer
-            </p>
-        </li>
-    </ul>
-</section>
-   </main>
 
-   <!--Футер-->
+    <!--Герой -->
+    <main>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="main-button">Order Service</button>
+      </section>
+
+      <!--Переваги-->
+      <section class="list">
+        <div class="container">
+          <h2 hidden class="feature-titles">Our advantages</h2>
+          <ul class="list">
+            <li>
+              <h3 class="title-text">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="title-text">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="title-text">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="title-text">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!--Що робимо-->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="page-work list">
+            <li>
+              <img src="./images/Photo1.jpg" alt="Computer" width="360" />
+            </li>
+            <li><img src="./images/Photo2.jpg" alt="Massage" width="360" /></li>
+            <li><img src="./images/Photo3.jpg" alt="Phone" width="360" /></li>
+          </ul>
+        </div>
+      </section>
+      <section class="section-team">
+        <h2 class="section-title list">Our Team</h2>
+        <ul class="workers-group list">
+          <li class="workers-title">
+            <img
+              src="./images/Person1.jpg"
+              alt="Worker1"
+              width="264"
+              class="image-person"
+            />
+            <h3 class="title-text">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
+          </li>
+          <li class="workers-title">
+            <img
+              src="./images/Person2.jpg"
+              alt="Worker2"
+              width="264"
+              class="image-person"
+            />
+            <h3 class="title-text">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
+          </li>
+          <li class="workers-title">
+            <img
+              src="./images/Person3.jpg"
+              alt="Worker3"
+              width="264"
+              class="image-person"
+            />
+            <h3 class="title-text">Camila Garcia</h3>
+            <p class="text">Marketing</p>
+          </li>
+          <li class="workers-title">
+            <img
+              src="./images/Person4.jpg"
+              alt="Worker4"
+              width="264"
+              class="image-person"
+            />
+            <h3 class="title-text">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <!--Футер-->
 
     <footer class="footer-portfolio">
-        <a class="link-logo link" href="./index.html">Web<span class="logo-text-footer">Studio</span></a>
-        <p class="footer-text">
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
+      <a class="link-logo link" href="./index.html"
+        >Web<span class="logo-text-footer">Studio</span></a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-    </body>
-    
-    </html>
+  </body>
+</html>
