--- a/portfolio.html
+++ b/portfolio.html
@@ -1,129 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
-</head>
+  </head>
 
-<body class="page">
+  <body class="page">
     <!-- Шапка сайту -->
 
     <header>
-        <nav class="main-navigation">
-            <a class="link-logo link" href="./index.html">Web<span class="logo-text">Studio</span></a>
-            <ul class="site-nav list">
-                <li><a class="header-text link" href="./index.html"> Studio</a></li>
-                <li><a class="header-text link" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="header-text link" href="">Contacts</a></li>
-            </ul>
-        </nav>
+      <nav class="container main-nav">
+        <a class="link-logo link" href="./index.html"
+          >Web<span class="logo-text">Studio</span></a
+        >
+        <ul class="site-nav list">
+          <li class="item">
+            <a class="header-text link" href="./index.html"> Studio</a>
+          </li>
+          <li class="item">
+            <a class="header-text link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="item">
+            <a class="header-text link" href="">Contacts</a>
+          </li>
+        </ul>
         <address class="address link">
-            <ul class="list">
-                <li><a class="adress-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="adress-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
+          <ul class="auth-nav list">
+            <li>
+              <a class="adress-item link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="adress-item link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
         </address>
+      </nav>
     </header>
-                <main>
-                <section>
-                    <h1 hidden>Examples</h1>
-    <!--Buttons section--->
+    <main>
+      <section>
+        <h1 hidden>Examples</h1>
+        <!--Buttons section--->
         <ul class="list">
-            <li><button class="filter-btn link" style="cursor: pointer" type="button">
-                All</button></li>
-            <li><button class="filter-btn link" style="cursor: pointer" type="button">
-                Web Site</button></li>
-            <li><button class="filter-btn link" style="cursor: pointer" type="button">
-                App</button></li>
-            <li><button class="filter-btn link" style="cursor: pointer" type="button">
-                Design</button></li>
-            <li><button class="filter-btn link" style="cursor: pointer" type="button">
-                Marketing</button></li>
+          <li>
+            <button
+              class="filter-btn link"
+              style="cursor: pointer"
+              type="button"
+            >
+              All
+            </button>
+          </li>
+          <li>
+            <button
+              class="filter-btn link"
+              style="cursor: pointer"
+              type="button"
+            >
+              Web Site
+            </button>
+          </li>
+          <li>
+            <button
+              class="filter-btn link"
+              style="cursor: pointer"
+              type="button"
+            >
+              App
+            </button>
+          </li>
+          <li>
+            <button
+              class="filter-btn link"
+              style="cursor: pointer"
+              type="button"
+            >
+              Design
+            </button>
+          </li>
+          <li>
+            <button
+              class="filter-btn link"
+              style="cursor: pointer"
+              type="button"
+            >
+              Marketing
+            </button>
+          </li>
         </ul>
 
-            <ul class="list">
-                <li> 
-                    <a class="link" href="">
-                    <img src="./images/Portfolio/port-photo1.jpg" alt="bankapp" width="360"/>
-                    <h2 class="title-text">Banking App Interface Concept</h2>
-                    <p class="text">App</p>
-                    </a>
-                </li>
-                <li>
-                <a class="link" href="">
-                <img src="./images/Portfolio/port-photo2.jpg" alt="payment" width="360" />
-                <h2 class="title-text">Cashless Payment</h2>
-                <p class="text">Marketing</p>
-                </a>
-                </li>
-                <li>
-                    <a class="link" href="">
-                    <img src="./images/Portfolio/port-photo3.jpg" alt="laptop-mobile" width="360"/>
-                    <h2 class="title-text">Meditation App</h2>
-                    <p class="text">App</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="">
-                    <img src="./images/Portfolio/port-photo4.jpg" alt="driver" width="360"/>
-                    <h2 class="title-text">Taxi Service</h2>
-                    <p class="text">Marketing</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="">
-                    <img src="./images/Portfolio/port-photo5.jpg" alt="Illustrations" width="360"/>
-                    <h2 class="title-text">Screen Illustrations</h2>
-                    <p class="text">Design</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="">
-                    <img src="./images/Portfolio/port-photo6.jpg" alt="Girl" width="360"/>
-                    <h2 class="title-text">Online Courses</h2>
-                    <p class="text">Marketing</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="">
-                    <img src="./images/Portfolio/port-photo7.jpg" alt="Instagram" width="360"/>
-                    <h2 class="title-text">Instagram Stories Concept</h2>
-                    <p class="text">Design</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="">
-                    <img src="./images/Portfolio/port-photo8.jpg" alt="food" width="360"/>
-                    <h2 class="title-text">Organic Food</h2>
-                    <p class="text">Web Site</p>
-                </a>
-                </li>
-                <li>
-                    <a class="link" href="">
-                    <img src="./images/Portfolio/port-photo9.jpg" alt="late" width="360"/>
-                    <h2 class="title-text">Fresh Coffee</h2>
-                    <p class="text">Web Site</p>
-                    </a>
-                </li>
-            </ul>
-            </section>
+        <ul class="list">
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/Portfolio/port-photo1.jpg"
+                alt="bankapp"
+                width="360"
+              />
+              <h2 class="title-text">Banking App Interface Concept</h2>
+              <p class="text">App</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/Portfolio/port-photo2.jpg"
+                alt="payment"
+                width="360"
+              />
+              <h2 class="title-text">Cashless Payment</h2>
+              <p class="text">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/Portfolio/port-photo3.jpg"
+                alt="laptop-mobile"
+                width="360"
+              />
+              <h2 class="title-text">Meditation App</h2>
+              <p class="text">App</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/Portfolio/port-photo4.jpg"
+                alt="driver"
+                width="360"
+              />
+              <h2 class="title-text">Taxi Service</h2>
+              <p class="text">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/Portfolio/port-photo5.jpg"
+                alt="Illustrations"
+                width="360"
+              />
+              <h2 class="title-text">Screen Illustrations</h2>
+              <p class="text">Design</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/Portfolio/port-photo6.jpg"
+                alt="Girl"
+                width="360"
+              />
+              <h2 class="title-text">Online Courses</h2>
+              <p class="text">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/Portfolio/port-photo7.jpg"
+                alt="Instagram"
+                width="360"
+              />
+              <h2 class="title-text">Instagram Stories Concept</h2>
+              <p class="text">Design</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/Portfolio/port-photo8.jpg"
+                alt="food"
+                width="360"
+              />
+              <h2 class="title-text">Organic Food</h2>
+              <p class="text">Web Site</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/Portfolio/port-photo9.jpg"
+                alt="late"
+                width="360"
+              />
+              <h2 class="title-text">Fresh Coffee</h2>
+              <p class="text">Web Site</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <!--Футер-->
     <footer class="footer-portfolio">
-        <a class="link-logo link" href="./index.html">Web<span class="logo-text-footer">Studio</span></a>
-        <p class="footer-text">
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
+      <a class="link-logo link" href="./index.html"
+        >Web<span class="logo-text-footer">Studio</span></a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-    </body>
-    
-    </html>
+  </body>
+</html>
