--- a/index.html
+++ b/index.html
@@ -66,31 +66,31 @@
 
       <!--Переваги-->
       <section class="list">
-        <div class="container">
+        <div class="container advantages">
           <h2 hidden class="feature-titles">Our advantages</h2>
           <ul class="list">
-            <li>
+            <li class="item">
               <h3 class="title-text">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title-text">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title-text">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title-text">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -114,6 +114,8 @@
           </ul>
         </div>
       </section>
+
+      <!--Our team-->
       <section class="section-team">
         <h2 class="section-title list">Our Team</h2>
         <ul class="workers-group list">
