--- a/portfolio.html
+++ b/portfolio.html
@@ -60,155 +60,158 @@
       <section>
         <h1 hidden>Examples</h1>
         <!--Buttons section--->
-        <ul class="list">
-          <li>
-            <button
-              class="filter-btn link"
-              style="cursor: pointer"
-              type="button"
-            >
-              All
-            </button>
-          </li>
-          <li>
-            <button
-              class="filter-btn link"
-              style="cursor: pointer"
-              type="button"
-            >
-              Web Site
-            </button>
-          </li>
-          <li>
-            <button
-              class="filter-btn link"
-              style="cursor: pointer"
-              type="button"
-            >
-              App
-            </button>
-          </li>
-          <li>
-            <button
-              class="filter-btn link"
-              style="cursor: pointer"
-              type="button"
-            >
-              Design
-            </button>
-          </li>
-          <li>
-            <button
-              class="filter-btn link"
-              style="cursor: pointer"
-              type="button"
-            >
-              Marketing
-            </button>
-          </li>
-        </ul>
-
-        <ul class="list">
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/port-photo1.jpg"
-                alt="bankapp"
-                width="360"
-              />
-              <h2 class="title-text">Banking App Interface Concept</h2>
-              <p class="text">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/port-photo2.jpg"
-                alt="payment"
-                width="360"
-              />
-              <h2 class="title-text">Cashless Payment</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/port-photo3.jpg"
-                alt="laptop-mobile"
-                width="360"
-              />
-              <h2 class="title-text">Meditation App</h2>
-              <p class="text">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/port-photo4.jpg"
-                alt="driver"
-                width="360"
-              />
-              <h2 class="title-text">Taxi Service</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/port-photo5.jpg"
-                alt="Illustrations"
-                width="360"
-              />
-              <h2 class="title-text">Screen Illustrations</h2>
-              <p class="text">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/port-photo6.jpg"
-                alt="Girl"
-                width="360"
-              />
-              <h2 class="title-text">Online Courses</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/port-photo7.jpg"
-                alt="Instagram"
-                width="360"
-              />
-              <h2 class="title-text">Instagram Stories Concept</h2>
-              <p class="text">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/port-photo8.jpg"
-                alt="food"
-                width="360"
-              />
-              <h2 class="title-text">Organic Food</h2>
-              <p class="text">Web Site</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Portfolio/port-photo9.jpg"
-                alt="late"
-                width="360"
-              />
-              <h2 class="title-text">Fresh Coffee</h2>
-              <p class="text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+        <div class="portfolio-button">
+          <ul class="list">
+            <li>
+              <button
+                class="filter-btn link"
+                style="cursor: pointer"
+                type="button"
+              >
+                All
+              </button>
+            </li>
+            <li>
+              <button
+                class="filter-btn link"
+                style="cursor: pointer"
+                type="button"
+              >
+                Web Site
+              </button>
+            </li>
+            <li>
+              <button
+                class="filter-btn link"
+                style="cursor: pointer"
+                type="button"
+              >
+                App
+              </button>
+            </li>
+            <li>
+              <button
+                class="filter-btn link"
+                style="cursor: pointer"
+                type="button"
+              >
+                Design
+              </button>
+            </li>
+            <li>
+              <button
+                class="filter-btn link"
+                style="cursor: pointer"
+                type="button"
+              >
+                Marketing
+              </button>
+            </li>
+          </ul>
+        </div>
+        <div class="flex-container">
+          <ul class="list">
+            <li class="flex-element">
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/port-photo1.jpg"
+                  alt="bankapp"
+                  width="360"
+                />
+                <h2 class="title-text">Banking App Interface Concept</h2>
+                <p class="text">App</p>
+              </a>
+            </li>
+            <li class="flex-element">
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/port-photo2.jpg"
+                  alt="payment"
+                  width="360"
+                />
+                <h2 class="title-text">Cashless Payment</h2>
+                <p class="text">Marketing</p>
+              </a>
+            </li>
+            <li class="flex-element">
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/port-photo3.jpg"
+                  alt="laptop-mobile"
+                  width="360"
+                />
+                <h2 class="title-text">Meditation App</h2>
+                <p class="text">App</p>
+              </a>
+            </li>
+            <li class="flex-element">
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/port-photo4.jpg"
+                  alt="driver"
+                  width="360"
+                />
+                <h2 class="title-text">Taxi Service</h2>
+                <p class="text">Marketing</p>
+              </a>
+            </li>
+            <li class="flex-element">
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/port-photo5.jpg"
+                  alt="Illustrations"
+                  width="360"
+                />
+                <h2 class="title-text">Screen Illustrations</h2>
+                <p class="text">Design</p>
+              </a>
+            </li>
+            <li class="flex-element">
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/port-photo6.jpg"
+                  alt="Girl"
+                  width="360"
+                />
+                <h2 class="title-text">Online Courses</h2>
+                <p class="text">Marketing</p>
+              </a>
+            </li>
+            <li class="flex-element">
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/port-photo7.jpg"
+                  alt="Instagram"
+                  width="360"
+                />
+                <h2 class="title-text">Instagram Stories Concept</h2>
+                <p class="text">Design</p>
+              </a>
+            </li>
+            <li class="flex-element">
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/port-photo8.jpg"
+                  alt="food"
+                  width="360"
+                />
+                <h2 class="title-text">Organic Food</h2>
+                <p class="text">Web Site</p>
+              </a>
+            </li>
+            <li class="flex-element">
+              <a class="link" href="">
+                <img
+                  src="./images/Portfolio/port-photo9.jpg"
+                  alt="late"
+                  width="360"
+                />
+                <h2 class="title-text">Fresh Coffee</h2>
+                <p class="text">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--Футер-->
