--- a/index.html
+++ b/index.html
@@ -25,36 +25,38 @@
     <!-- Шапка сайту -->
 
     <header>
-      <nav class="container main-nav">
-        <a class="link-logo link" href="./index.html"
-          >Web<span class="logo-text">Studio</span></a
-        >
-        <ul class="site-nav list">
-          <li class="item">
-            <a class="header-text link" href="./index.html"> Studio</a>
-          </li>
-          <li class="item">
-            <a class="header-text link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="item">
-            <a class="header-text link" href="">Contacts</a>
-          </li>
-        </ul>
-        <address class="address link">
-          <ul class="auth-nav list">
-            <li>
-              <a class="adress-item link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+      <div class="container">
+        <nav class="container main-nav">
+          <a class="link-logo link" href="./index.html"
+            >Web<span class="logo-text">Studio</span></a
+          >
+          <ul class="site-nav list">
+            <li class="item">
+              <a class="header-text link" href="./index.html"> Studio</a>
             </li>
-            <li>
-              <a class="adress-item link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+            <li class="item">
+              <a class="header-text link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="item">
+              <a class="header-text link" href="">Contacts</a>
             </li>
           </ul>
-        </address>
-      </nav>
+          <address class="address link">
+            <ul class="auth-nav list">
+              <li>
+                <a class="adress-item link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="adress-item link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </nav>
+      </div>
     </header>
 
     <!--Герой -->
@@ -166,13 +168,15 @@
     <!--Футер-->
 
     <footer class="footer-portfolio">
-      <a class="link-logo link" href="./index.html"
-        >Web<span class="logo-text-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-item">
+        <a class="link-logo link" href="./index.html"
+          >Web<span class="logo-text-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
