--- a/portfolio.html
+++ b/portfolio.html
@@ -216,13 +216,15 @@
     </main>
     <!--Футер-->
     <footer class="footer-portfolio">
-      <a class="link-logo link" href="./index.html"
-        >Web<span class="logo-text-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-item">
+        <a class="link-logo link" href="./index.html"
+          >Web<span class="logo-text-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
