--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
     <!--Герой -->
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="main-button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="main-button">Order Service</button>
+        </div>
       </section>
 
       <!--Переваги-->
@@ -119,49 +121,51 @@
 
       <!--Our team-->
       <section class="section-team">
-        <h2 class="section-title list">Our Team</h2>
-        <ul class="workers-group list">
-          <li class="workers-title">
-            <img
-              src="./images/Person1.jpg"
-              alt="Worker1"
-              width="264"
-              class="image-person"
-            />
-            <h3 class="title-text">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li class="workers-title">
-            <img
-              src="./images/Person2.jpg"
-              alt="Worker2"
-              width="264"
-              class="image-person"
-            />
-            <h3 class="title-text">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li class="workers-title">
-            <img
-              src="./images/Person3.jpg"
-              alt="Worker3"
-              width="264"
-              class="image-person"
-            />
-            <h3 class="title-text">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="workers-title">
-            <img
-              src="./images/Person4.jpg"
-              alt="Worker4"
-              width="264"
-              class="image-person"
-            />
-            <h3 class="title-text">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container team-elements">
+          <h2 class="section-title list">Our Team</h2>
+          <ul class="workers-group list">
+            <li class="workers-title">
+              <img
+                src="./images/Person1.jpg"
+                alt="Worker1"
+                width="264"
+                class="image-person"
+              />
+              <h3 class="title-text">Mark Guerrero</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li class="workers-title">
+              <img
+                src="./images/Person2.jpg"
+                alt="Worker2"
+                width="264"
+                class="image-person"
+              />
+              <h3 class="title-text">Tom Ford</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li class="workers-title">
+              <img
+                src="./images/Person3.jpg"
+                alt="Worker3"
+                width="264"
+                class="image-person"
+              />
+              <h3 class="title-text">Camila Garcia</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="workers-title">
+              <img
+                src="./images/Person4.jpg"
+                alt="Worker4"
+                width="264"
+                class="image-person"
+              />
+              <h3 class="title-text">Daniel Wilson</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
