--- a/portfolio.html
+++ b/portfolio.html
@@ -56,11 +56,11 @@
         </address>
       </nav>
     </header>
+
     <main>
-      <section>
-        <h1 hidden>Examples</h1>
-        <!--Buttons section--->
-        <div class="portfolio-button">
+      <section class="portfolio-main">
+        <div class="container">
+          <h1 hidden>Examples</h1>
           <ul class="list">
             <li>
               <button
@@ -108,8 +108,6 @@
               </button>
             </li>
           </ul>
-        </div>
-        <div class="flex-container">
           <ul class="list">
             <li class="flex-element">
               <a class="link" href="">
