--- a/index.html
+++ b/index.html
@@ -111,10 +111,29 @@
           <h2 class="section-title">What are we doing</h2>
           <ul class="page-work list">
             <li>
-              <img src="./images/Photo1.jpg" alt="Computer" width="360" />
+              <img
+                class="img-style"
+                src="./images/Photo1.jpg"
+                alt="Computer"
+                width="360"
+              />
             </li>
-            <li><img src="./images/Photo2.jpg" alt="Massage" width="360" /></li>
-            <li><img src="./images/Photo3.jpg" alt="Phone" width="360" /></li>
+            <li>
+              <img
+                class="img-style"
+                src="./images/Photo2.jpg"
+                alt="Massage"
+                width="360"
+              />
+            </li>
+            <li>
+              <img
+                class="img-style"
+                src="./images/Photo3.jpg"
+                alt="Phone"
+                width="360"
+              />
+            </li>
           </ul>
         </div>
       </section>
@@ -126,6 +145,7 @@
           <ul class="workers-group list">
             <li class="workers-title">
               <img
+                class="img-style"
                 src="./images/Person1.jpg"
                 alt="Worker1"
                 width="264"
@@ -136,6 +156,7 @@
             </li>
             <li class="workers-title">
               <img
+                class="img-style"
                 src="./images/Person2.jpg"
                 alt="Worker2"
                 width="264"
@@ -146,6 +167,7 @@
             </li>
             <li class="workers-title">
               <img
+                class="img-style"
                 src="./images/Person3.jpg"
                 alt="Worker3"
                 width="264"
@@ -156,6 +178,7 @@
             </li>
             <li class="workers-title">
               <img
+                class="img-style"
                 src="./images/Person4.jpg"
                 alt="Worker4"
                 width="264"
