--- a/portfolio.html
+++ b/portfolio.html
@@ -25,36 +25,38 @@
     <!-- Шапка сайту -->
 
     <header>
-      <nav class="container main-nav">
-        <a class="link-logo link" href="./index.html"
-          >Web<span class="logo-text">Studio</span></a
-        >
-        <ul class="site-nav list">
-          <li class="item">
-            <a class="header-text link" href="./index.html"> Studio</a>
-          </li>
-          <li class="item">
-            <a class="header-text link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="item">
-            <a class="header-text link" href="">Contacts</a>
-          </li>
-        </ul>
-        <address class="address link">
-          <ul class="auth-nav list">
-            <li>
-              <a class="adress-item link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+      <div class="container">
+        <nav class="container main-nav">
+          <a class="link-logo link" href="./index.html"
+            >Web<span class="logo-text">Studio</span></a
+          >
+          <ul class="site-nav list">
+            <li class="item">
+              <a class="header-text link" href="./index.html"> Studio</a>
             </li>
-            <li>
-              <a class="adress-item link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+            <li class="item">
+              <a class="header-text link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="item">
+              <a class="header-text link" href="">Contacts</a>
             </li>
           </ul>
-        </address>
-      </nav>
+          <address class="address link">
+            <ul class="auth-nav list">
+              <li>
+                <a class="adress-item link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="adress-item link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </nav>
+      </div>
     </header>
 
     <main>
@@ -112,6 +114,7 @@
             <li class="flex-element">
               <a class="link" href="">
                 <img
+                  class="img-style"
                   src="./images/Portfolio/port-photo1.jpg"
                   alt="bankapp"
                   width="360"
@@ -123,6 +126,7 @@
             <li class="flex-element">
               <a class="link" href="">
                 <img
+                  class="img-style"
                   src="./images/Portfolio/port-photo2.jpg"
                   alt="payment"
                   width="360"
@@ -134,6 +138,7 @@
             <li class="flex-element">
               <a class="link" href="">
                 <img
+                  class="img-style"
                   src="./images/Portfolio/port-photo3.jpg"
                   alt="laptop-mobile"
                   width="360"
@@ -145,6 +150,7 @@
             <li class="flex-element">
               <a class="link" href="">
                 <img
+                  class="img-style"
                   src="./images/Portfolio/port-photo4.jpg"
                   alt="driver"
                   width="360"
@@ -156,6 +162,7 @@
             <li class="flex-element">
               <a class="link" href="">
                 <img
+                  class="img-style"
                   src="./images/Portfolio/port-photo5.jpg"
                   alt="Illustrations"
                   width="360"
@@ -167,6 +174,7 @@
             <li class="flex-element">
               <a class="link" href="">
                 <img
+                  class="img-style"
                   src="./images/Portfolio/port-photo6.jpg"
                   alt="Girl"
                   width="360"
@@ -178,6 +186,7 @@
             <li class="flex-element">
               <a class="link" href="">
                 <img
+                  class="img-style"
                   src="./images/Portfolio/port-photo7.jpg"
                   alt="Instagram"
                   width="360"
@@ -189,6 +198,7 @@
             <li class="flex-element">
               <a class="link" href="">
                 <img
+                  class="img-style"
                   src="./images/Portfolio/port-photo8.jpg"
                   alt="food"
                   width="360"
@@ -200,6 +210,7 @@
             <li class="flex-element">
               <a class="link" href="">
                 <img
+                  class="img-style"
                   src="./images/Portfolio/port-photo9.jpg"
                   alt="late"
                   width="360"
