--- a/index.html
+++ b/index.html
@@ -150,8 +150,10 @@
                 alt="Worker1"
                 width="264"
               />
-              <h3 class="title-text">Mark Guerrero</h3>
-              <p class="text">Product Designer</p>
+              <div class="container-name">
+                <h3 class="title-text">Mark Guerrero</h3>
+                <p class="text">Product Designer</p>
+              </div>
             </li>
             <li class="workers-title">
               <img
@@ -160,8 +162,11 @@
                 alt="Worker2"
                 width="264"
               />
-              <h3 class="title-text">Tom Ford</h3>
-              <p class="text">Frontend Developer</p>
+
+              <div class="container-name">
+                <h3 class="title-text">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
+              </div>
             </li>
             <li class="workers-title">
               <img
@@ -170,8 +175,10 @@
                 alt="Worker3"
                 width="264"
               />
-              <h3 class="title-text">Camila Garcia</h3>
-              <p class="text">Marketing</p>
+              <div class="container-name">
+                <h3 class="title-text">Camila Garcia</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="workers-title">
               <img
@@ -180,8 +187,10 @@
                 alt="Worker4"
                 width="264"
               />
-              <h3 class="title-text">Daniel Wilson</h3>
-              <p class="text">UI Designer</p>
+              <div class="container-name">
+                <h3 class="title-text">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
