--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Шапка сайту -->
 
     <header>
-      <div class="container">
+      <div class="container header">
         <nav class="container main-nav">
           <a class="link-logo link" href="./index.html"
             >Web<span class="logo-text">Studio</span></a
