--- a/portfolio.html
+++ b/portfolio.html
@@ -140,21 +140,20 @@
               </a>
             </div>
             </li>
-            <div class="flex-element">
+            <li class="flex-element">
               <div class="container-flex">
               <a class="link" href="">
                 <img
                   class="img-style"
                   src="./images/Portfolio/port-photo3.jpg"
                   alt="laptop-mobile"
-                  width="360"
-                />
+                  width="360"/>
                 <h2 class="title-text">Meditation App</h2>
                 <p class="text">App</p>
               </a>
             </div>
             </li>
-            <div class="flex-element">
+            <li class="flex-element">
               <div class="container-flex">
               <a class="link" href="">
                 <img
