--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body class="page">
     <!-- Шапка сайту -->
 
-    <header>
+    <header class="main-header">
       <div class="container header">
         <nav class="container main-nav">
           <a class="link-logo link" href="./index.html"
@@ -107,7 +107,7 @@
 
       <!--Що робимо-->
       <section class="section-container">
-        <div class="container">
+        <div class="container-activites">
           <h2 class="section-title">What are we doing</h2>
           <ul class="page-work list">
             <li>
