--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Шапка сайту -->
 
     <header class="main-header">
-      <div class="container header">
+      <div class="container">
         <nav class="container main-nav">
           <a class="link-logo link" href="./index.html"
             >Web<span class="logo-text">Studio</span></a
@@ -41,7 +41,7 @@
               <a class="header-text link" href="">Contacts</a>
             </li>
           </ul>
-          <address class="address link">
+          <address class="address-nav link">
             <ul class="auth-nav list">
               <li>
                 <a class="adress-item link" href="mailto:info@devstudio.com"
