--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
   <body class="page">
     <!-- Шапка сайту -->
 
-    <header>
+    <header class="main-header">
       <div class="container">
         <nav class="container main-nav">
           <a class="link-logo link" href="./index.html"
@@ -41,7 +41,7 @@
               <a class="header-text link" href="">Contacts</a>
             </li>
           </ul>
-          <address class="address link">
+          <address class="address-nav link">
             <ul class="auth-nav list">
               <li>
                 <a class="adress-item link" href="mailto:info@devstudio.com"
