--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
       <section class="portfolio-main">
         <div class="container">
           <h1 hidden>Examples</h1>
-          <ul class="list">
+          <ul class="portfolio-title list">
             <li>
               <button
                 class="filter-btn link"
