--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <section class="main-advantages list">
         <div class="container advantages">
           <h2 hidden class="feature-titles">Our advantages</h2>
-          <ul class="list">
+          <ul class="secondary-title list">
             <li class="advantages-item item">
               <h3 class="title-text">Strategy</h3>
               <p class="text">
