--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </header>
 
     <!--Герой -->
-    <main>
+    <>
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
@@ -107,10 +107,10 @@
 
       <!--Що робимо-->
       <section class="section-container">
-        <div class="container-activites">
+        <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="page-work list">
-            <li>
+            <li class="section-content">
               <img
                 class="img-style"
                 src="./images/Photo1.jpg"
@@ -118,7 +118,7 @@
                 width="360"
               />
             </li>
-            <li>
+            <li class="section-content">
               <img
                 class="img-style"
                 src="./images/Photo2.jpg"
@@ -135,8 +135,10 @@
               />
             </li>
           </ul>
-        </div>
+          </div>
       </section>
+  
+      
 
       <!--Our team-->
       <section class="section-team">
