--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 width="360"
               />
             </li>
-            <li>
+            <li class="section-content">
               <img
                 class="img-style"
                 src="./images/Photo3.jpg"
