--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -26,7 +26,7 @@
 
     <header class="main-header">
       <div class="container primary-header">
-        <nav class="container main-nav">
+        <nav class="main-nav">
           <a class="link-logo link" href="./index.html"
             >Web<span class="logo-text">Studio</span></a
           >
@@ -62,7 +62,7 @@
     <main>
       <section class="portfolio-main">
         <div class="container">
-          <h1 hidden>Examples</h1>
+          <h1 class="visually-hidden">Examples</h1>
           <ul class="portfolio-title list">
             <li>
               <button
