--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <header class="main-header">
       <div class="container primary-header">
-        <nav class="container main-nav">
+        <nav class="main-nav">
           <a class="link-logo link" href="./index.html"
             >Web<span class="logo-text">Studio</span></a
           >
@@ -71,7 +71,7 @@
       <!--Переваги-->
       <section class="main-advantages list">
         <div class="container advantages">
-          <h2 hidden class="feature-titles">Our advantages</h2>
+          <h2 class="visually-hidden">Our advantages</h2>
           <ul class="secondary-title list">
             <li class="advantages-item item">
               <h3 class="title-text">Strategy</h3>
